--- a/index.html
+++ b/index.html
@@ -3,23 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Números e Nomes Aleatórios</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Loja de Apps</title>
 </head>
 <body>
-    <div class="container">
-        <button id="gerarNumero">Gerar Número</button>
-        <button id="gerarNome">Gerar Nome</button>
-    </div>
+    <header>
+        <h1>Loja de Apps</h1>
+        <!-- Adicione links de navegação, como Home, Categorias, etc. -->
+    </header>
 
-    <div class="result-tabs">
-        <div class="tab" id="numerosTab" onclick="openTab('numerosTab', 'numerosResult')">Números</div>
-        <div class="tab" id="nomesTab" onclick="openTab('nomesTab', 'nomesResult')">Nomes</div>
-    </div>
+    <section id="featured-apps">
+        <!-- Destaque algumas apps aqui -->
+    </section>
 
-    <div id="numerosResult" class="result-content"></div>
-    <div id="nomesResult" class="result-content"></div>
+    <section id="all-apps">
+        <!-- Liste todas as apps disponíveis -->
+    </section>
 
-    <script src="script.js"></script>
+    <footer>
+        <p>&copy; 2024 Loja de Apps</p>
+    </footer>
 </body>
 </html>
